# MIRA

./: .env.example  .gitignore  analyze_lora_svd.py  analyze_smoothness.py  audit_completion_tokens.py  build_sft_v2.py  check_3hard_zeros.py  check_shard_compat.py  check_truncation.py  convert_pd_cache_lazy.py  coverage_audit.py  data_pull.py  data_pull_2.py  debug_refetch_failure.py  diagnose_lfp_coverage.py  diagnose_pd_pickle.py  diagnose_thermo.py  evaluate.py  evaluate_batched.py  expand_pd_cache.py  filter_old_traces.py  generate_reasoning_traces.py  generate_reasoning_traces_ray.py  generate_reasoning_traces_ray_120b.py  generate_traces_openrouter.py  gibbs_corrector.py  inspect_bad_entry_ids.py  inspect_data_and_prompt.py  inspect_lfp_chemsys.py  inspect_pd_cache.py  instrument_resolve_pd.py  main.py  monitor.py  monitor2.py  pd_coverage_preflight.py  pd_interpolation_discrimination_test.py  pd_shard_load_time.py  pd_shard_probe.py  pyproject.toml  quick_run.sh  (+21 more)
cleanup_dataset/: clean_dataset.py  split_dataset.py
core/: data.py  model.py  observability.py  reward.py
data_curation/: build_clean_sft_v3_corpus.py  data_pull.py  data_pull_3.py  generate_traces_openrouter.py  kononova_triage.py  split_dataset.py
experiments/: __init__.py  base.py  grpo.py  sft.py  sft_grpo.py
rag/: build_retrieval_index.py  generate_mace_embeddings.py  train_matryoshka.py
run_debug_and_analysis/: analyze_run.py  audit_temperature.py  audit_token_lengths.py  clean_traces.py  corpus_analysis.py  diagnose_dataset.py  fix_json.py  lora_spectral_analysis.py  mem_probe.py  (+13 more)
(+1 files in other folders)
