[project]
name = "ft-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "litellm>=1.84.0",
    "mace>=1.1.2",
    "mace-torch>=0.3.15",
    "mp-api>=0.46.0",
    "openai>=2.36.0",
    "peft>=0.19.1",
    "py-spy>=0.4.2",
    "transformers>=5.7.0",
    "trl>=1.3.0",
    "wandb>=0.26.1",
]
